# ex-camera-lidar

./: README.md
lidar_camera_ex/: build.sh  start.sh
lidar_camera_ex/src/lidar_camera_calib/: CMakeLists.txt  package.xml
lidar_camera_ex/src/lidar_camera_calib/config/: calib.yaml  extrinsic.txt  points_copy.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam1_record/: extrinsic.txt  points(复件).txt  points.txt  points_fix.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam2_record/: extrinsic.txt  points.txt  points_copy.txt  points_test.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam3_record/: extrinsic.txt  points.txt  points_copy.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam4_record/: calib_camera4_标定点points_old_backup.txt  calib_camera4_相机外参_old_backup.txt  extrinsic.txt  points.txt  points_copy.txt  points_copy1.txt  points_extra.txt  points_extra_calib4points.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam5MEI_record(另一个复件)/: points.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam5MEI_record(复件)/: extrinsic.txt  points_copy.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam5_record/: extrinsic.txt  points.txt  points_copy.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam6_record/: extrinsic.txt  points.txt  points_copy.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam7_record/: extrinsic.txt  points.txt  points_copy.txt
lidar_camera_ex/src/lidar_camera_calib/config/car1_record/cam8_record/: extrinsic.txt  points.txt  points_copy.txt
lidar_camera_ex/src/lidar_camera_calib/include/: lidar_camera_calib.h
lidar_camera_ex/src/lidar_camera_calib/include(复件)/: common.h
lidar_camera_ex/src/lidar_camera_calib/launch/: lidar_camera_calib.launch
lidar_camera_ex/src/lidar_camera_calib/src/: ccalib.cpp  lidar_camera_calib.cpp
