<?xml version="1.0"?>
<package>
    <name>lidar_camera_calib</name>
    <version>1.11.0</version>
    <description>The lidar_camera_calib package</description>

    <maintainer email="lim@uditech.com">lim</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>opencv2</build_depend>

    <run_depend>pcl_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>opencv2</run_depend>

    <export></export>
</package>
